RESOLVED FIXED303038
Regression(303442@main) TestWebKitAPI.JSHandle.Basic is asserting in debug
https://bugs.webkit.org/show_bug.cgi?id=303038
Summary Regression(303442@main) TestWebKitAPI.JSHandle.Basic is asserting in debug
Chris Dumez
Reported 2025-11-23 20:23:23 PST
TestWebKitAPI.JSHandle.Basic is asserting in debug after 303442@main: ``` ASSERT(data.strongReference->globalObject() == &globalObject); ```
Attachments
Chris Dumez
Comment 1 2025-11-23 20:39:33 PST
EWS
Comment 2 2025-11-24 00:38:42 PST
Committed 303478@main (bccdf740c57e): <https://commits.webkit.org/303478@main> Reviewed commits have been landed. Closing PR #54397 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-11-24 00:39:11 PST
Note You need to log in before you can comment on or make changes to this bug.