Regression(303442@main) TestWebKitAPI.JSHandle.Basic is asserting in debug https://bugs.webkit.org/show_bug.cgi?id=303038

Reviewed by Geoffrey Garen.

Stop passing the lexicalGlobalObject as a parameter to the
WebKitJSHandle constructor and instead rely on the object's globalObject.

The implementation expected the lexicalGlobalObject to always be the same
as the object's globalObject, which wasn't always true in practice.

* Source/WebCore/page/WebKitJSHandle.cpp:
(WebCore::WebKitJSHandle::create):
(WebCore::WebKitJSHandle::WebKitJSHandle):
* Source/WebCore/page/WebKitJSHandle.h:
* Source/WebCore/page/WebKitNamespace.cpp:
(WebCore::WebKitNamespace::createJSHandle):
* Source/WebCore/page/WebKitNamespace.h:
* Source/WebCore/page/WebKitNamespace.idl:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::hitTestAtPoint):

Canonical link: https://commits.webkit.org/303478@main